crates/cherry-pit-core/tests/compile_fail/event_scheduler_rejects_type_erasure.stderr
error[E0038]: the trait `EventScheduler` is not dyn compatible
 --> tests/compile_fail/event_scheduler_rejects_type_erasure.rs:6:18
  |
6 |     let _erased: Option<ErasedScheduler> = None;
  |                  ^^^^^^^^^^^^^^^^^^^^^^^ `EventScheduler` is not dyn compatible
  |
note: for a trait to be dyn compatible it needs to allow building a vtable
      for more information, visit <https://doc.rust-lang.org/reference/items/traits.html#dyn-compatibility>
 --> src/scheduler.rs
  |
  |     fn arm(&self, event: ScheduleArmed) -> impl Future<Output = Result<(), Self::Error>> + Send;
  |                                            ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ the trait is not dyn compatible because method `arm` references an `impl Trait` type in its return type
...
  |     ) -> impl Future<Output = Result<(), Self::Error>> + Send;
  |          ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ the trait is not dyn compatible because method `cancel` references an `impl Trait` type in its return type
...
  |     ) -> impl Future<Output = Result<ScheduleRecoveryReport, Self::Error>> + Send;
  |          ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ the trait is not dyn compatible because method `recover_due` references an `impl Trait` type in its return type

error[E0038]: the trait `EventScheduler` is not dyn compatible
 --> tests/compile_fail/event_scheduler_rejects_type_erasure.rs:6:44
  |
6 |     let _erased: Option<ErasedScheduler> = None;
  |                                            ^^^^ `EventScheduler` is not dyn compatible
  |
note: for a trait to be dyn compatible it needs to allow building a vtable
      for more information, visit <https://doc.rust-lang.org/reference/items/traits.html#dyn-compatibility>
 --> src/scheduler.rs
  |
  |     fn arm(&self, event: ScheduleArmed) -> impl Future<Output = Result<(), Self::Error>> + Send;
  |                                            ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ the trait is not dyn compatible because method `arm` references an `impl Trait` type in its return type
...
  |     ) -> impl Future<Output = Result<(), Self::Error>> + Send;
  |          ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ the trait is not dyn compatible because method `cancel` references an `impl Trait` type in its return type
...
  |     ) -> impl Future<Output = Result<ScheduleRecoveryReport, Self::Error>> + Send;
  |          ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ the trait is not dyn compatible because method `recover_due` references an `impl Trait` type in its return type
